<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/bt_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display"
        app:layout_constraintBottom_toTopOf="@id/edt_search"
        app:layout_constraintEnd_toStartOf="@id/bt_sort_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_sort_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_name"
        app:layout_constraintBottom_toBottomOf="@id/bt_display"
        app:layout_constraintEnd_toStartOf="@id/bt_sort_money"
        app:layout_constraintStart_toEndOf="@id/bt_display"
        app:layout_constraintTop_toTopOf="@id/bt_display" />

    <Button
        android:id="@+id/bt_sort_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_money"
        app:layout_constraintBottom_toBottomOf="@id/bt_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_sort_name"
        app:layout_constraintTop_toTopOf="@id/bt_display" />

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/sw_refresh"
        app:layout_constraintEnd_toStartOf="@id/bt_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_display"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@id/edt_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edt_search"
        app:layout_constraintTop_toTopOf="@id/edt_search" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sw_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>